re-done project pages, made site more responsive, seo friendly

--- a/pages/about.html
+++ b/pages/about.html
@@ -17,23 +17,24 @@
     </section>  
     <main class="about-me">
       <section>
-          <div class="outer-container">
-            <div class="section1">
-              <div class="dots">
-                <img src="/img/b&w-dots.png" alt="black dots">
-              </div>
-              <div class="headshot-about">
-                <img src="/img/b&wHeadShot.png" alt="headshot of site owner">
-              </div>
+        <div class="outer-container">
+          <div class="section1">
+            <div class="dots">
+              <img src="/img/b&w-dots.png" alt="black dots">
             </div>
-            <div class="section2">
-              <div class="portfolio-name">
-                <img src="/img/portfolio-name-cyan.png" alt="decorative name of site owner created on canva">
-              </div>
+            <div class="headshot-about">
+              <img src="/img/b&wHeadShot.png" alt="headshot of site owner">
             </div>
-          </div> 
+          </div>
+          <div class="section2">
+            <div class="portfolio-name">
+              <img src="/img/portfolio-name-cyan.png" alt="decorative name of site owner created on canva">
+            </div>
+          </div>
+        </div> 
       </section>
-      <section>
+
+      <section class="about--me-container">
         <!--ABOUT ME-->
           <div class="greetings-label">
             <h2>about me</h2>
@@ -82,39 +83,20 @@
                 <div class="fun-facts">
                   <div class="facts">
                     <div class="check-mark"><img src="/img/circle-checkmark.png"></div>
-                    <div><p>I have been married for 22 years and I am a mother of 3. Ages 22, 16, and 10.</p></div>
+                    <div class="check-mark-text"><p>I have been married for 22 years and I am a mother of 3. Ages 22, 16, and 10.</p></div>
                     
                   </div>
                   <div class="facts">
                     <div class="check-mark"><img src="/img/circle-checkmark.png"></div>
-                    <div><p>When I’m not at my computer I am at a baseball field watching my son play baseball.</p></div>
+                    <div class="check-mark-text"><p>When I’m not at my computer I am at a baseball field watching my son play baseball.</p></div>
                   </div>
                   <div class="facts">
                     <div class="check-mark"><img src="/img/circle-checkmark.png"></div>
-                    <div><p>I have 2 Golden Retrievers named Ruby and Harley Davidson.</p></div>
+                    <div class="check-mark-text"><p>I have 2 Golden Retrievers named Ruby and Harley Davidson.</p></div>
                   </div>
                 </div>
               </div>
-                        <article class="resume-border">
-              <div>
-                <div class="author-bio">
-                  <img
-                    src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1500/v1742999496/genny_allison_portfolio_jgvlzh.png"
-                      alt="Photo of Genny Allison, the web developer and AI content specialist"
-                      type="image/avif"
-                      width="425"
-                      height="auto"
-                      aspect-ratio="2.0769";
-                  />
-                  <div class="author-bio-text ">
-                      <h2>Partner with an AI Content Specialist & Web Developer</h2>
-                    <p><i>Looking for someone who can combine creativity,<br> cutting-edge AI tools, and technical expertise to build<br> stunning web platforms and engaging content?<br> You've come to the right place.</i></p>
-                    <p>At <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and web development using tools like ChatGPT, Midjourney, Figma, and Uizard. My portfolio showcases my ability to integrate AI solutions seamlessly into modern web design, delivering high-performing, SEO-optimized websites and content tailored to today's digital demands.</p>
-                    <p><a href="https://www.linkedin.com/in/genny-allison/" target="_blank" rel="noopener noreferrer" aria-label="Visit Genny Allison's LinkedIn on a new tab">Connect with me on LinkedIn</a> or <a href="https://gennyallison.netlify.app" target="_blank" rel="noopener noreferrer" aria-label="Visit Genny Allison's professional portfolio on a new tab">explore my portfolio</a> to see how I can help bring your vision to life.</p>
-                  </div>
-                </div>
-              </div>
-            </article>
+              
             </div>
           </div> 
       </section>               
