--- a/pages/collections.html
+++ b/pages/collections.html
@@ -25,45 +25,35 @@
     <header>
       <div class="canvas-skills-grid">
         <div class="canvas-skills-img">
-          <img src="/img/collections.png" />
+          <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1200/v1743092340/collections_ky7hd1.avif"
+            alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
+            type="image/avif"
+            width="610"
+            height="345"
+            aspect-ratio="1.75"
+            object-fit="cover"
+          >
         </div>
         <div class="canvas-skills-title">
           <h1>a canvas of innovation:</h1>
           <h2>my digital creations</h2>
         </div>
       </div>
-      <!-- Hamburger Icon -->
-      <div id="project-navigation">
-        <div class="menu-toggle-container">
-          <div class="menu-toggle" onclick="toggleProjectMenu()">☰</div>
-        </div>
-        <div id="project-nav" class="project-nav hidden">
-          <ul>
-            <li><a href="#project1" class="links">Project 1</a></li>
-            <li><a href="#project2" class="links">Project 2</a></li>
-            <li><a href="#project3" class="links">Project 3</a></li>
-            <li><a href="#project4" class="links">Project 4</a></li>
-            <li><a href="#project5" class="links">Project 5</a></li>
-            <li><a href="#project6" class="links">Project 6</a></li>
-          </ul>
-        </div>
-      </div>
     </header>
     <main class="collections">
-      <!--resume-->
       <div class="collections-grid">
         <div class="collections-row">
           <div class="collection-thumbnail-box">
+            <div class="collections-title">
+              <h2><a href="/pages/project1.html">project 1</a></h2>
+            </div>
             <div class="collections-border-white">
               <div class="collections-container">
-                <div class="collections-title">
-                  <h2>project 1</h2>
-                </div>
                 <div class="collections-thumbnail">
                   <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1880,fl_lossy/v1743014132/project1-thumbnail_palgve.avif" 
                     alt=""
                     type="image/avif"
-                    width="93%"
+                    width="100%"
                     height="auto"
                     apect-ratio="1.19 / 1"
                   />
@@ -85,16 +75,16 @@
             </div>
           </div>
           <div class="collection-thumbnail-box">
+            <div class="collections-title">
+             <h2><a href="/pages/project2.html">project 2</a></h2>
+            </div>
             <div class="collections-border-white">
               <div class="collections-container">
-                <div class="collections-title">
-                  <h2>project 2</h2>
-                </div>
                 <div class="collections-thumbnail">
                   <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1880,fl_lossy/v1743014132/project2-thumbnail_z7t2rk.avif" 
                     alt=""
                     type="image/avif"
-                    width="93%"
+                    width="100%"
                     height="auto"
                     apect-ratio="1.19 / 1"
                   />
@@ -116,16 +106,16 @@
             </div>
           </div>
           <div class="collection-thumbnail-box">
+            <div class="collections-title">
+              <h2><a href="/pages/project3.html">project 3</a></h2>
+            </div>
             <div class="collections-border-white">
               <div class="collections-container">
-                <div class="collections-title">
-                  <h2>project 3</h2>
-                </div>
                 <div class="collections-thumbnail">
                   <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1880,fl_lossy/v1743014132/project3-thumbnail_m2okuz.avif" 
                     alt=""
                     type="image/avif"
-                    width="93%"
+                    width="100%"
                     height="auto"
                     apect-ratio="1.19 / 1"
                   />
@@ -149,16 +139,17 @@
         </div>
         <div class="collections-row">
           <div class="collection-thumbnail-box">
+            <div class="collections-title">
+              <h2><a href="/pages/project4.html">project 4</a></h2>
+            </div>
             <div class="collections-border-white">
               <div class="collections-container">
-                <div class="collections-title">
-                  <h2>project 4</h2>
-                </div>
+
                 <div class="collections-thumbnail">
                   <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1880,fl_lossy/v1743014132/project4-thumbnail_e5nrva.avif" 
                     alt=""
                     type="image/avif"
-                    width="93%"
+                    width="100%"
                     height="auto"
                     apect-ratio="1.19 / 1"
                   />
@@ -180,16 +171,16 @@
             </div>
           </div>
           <div class="collection-thumbnail-box">
+            <div class="collections-title">
+              <h2><a href="/pages/project5.html">project 5</a></h2>
+            </div>
             <div class="collections-border-white">
               <div class="collections-container">
-                <div class="collections-title">
-                  <h2>project 5</h2>
-                </div>
                 <div class="collections-thumbnail">
                   <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1880,fl_lossy/v1743017418/project5-thumbnail_ljotky.avif" 
                     alt=""
                     type="image/avif"
-                    width="93%"
+                    width="100%"
                     height="auto"
                     apect-ratio="1.19 / 1"
                   />
@@ -211,16 +202,16 @@
             </div>
           </div>
           <div class="collection-thumbnail-box">
+            <div class="collections-title">
+              <h2><a href="/pages/project6.html">project 6</a></h2>
+            </div>
             <div class="collections-border-white">
               <div class="collections-container">
-                <div class="collections-title">
-                  <h2>project 6</h2>
-                </div>
                 <div class="collections-thumbnail">
                   <img src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1880,fl_lossy/v1743017418/project6-thumbnail_ws3h0z.avif" 
                     alt=""
                     type="image/avif"
-                    width="93%"
+                    width="100%"
                     height="auto"
                     apect-ratio="1.19 / 1"
                   />
