--- a/pages/project1.html
+++ b/pages/project1.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Genny Allison | Front End Developer</title>
+    <title><title>Genny Allison | Front-End Developer & AI Content Specialist | Tech Trends Project</title>
+</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions. Discover the blend of artistry and functionality across a range of digital creations.">
     <link class="tab-logo" rel="icon" href="/img/white_favicon/favicon.ico" type="image/icon type">
@@ -152,36 +153,38 @@
 
             <div class="resume-date" id="project-title">
               <h2>the grade: desktop</h2>
-              <h2>page speed insights</h2>
+              <h2><i>page speed insights</i></h2>
             </div>
           <section class="resume-border">
             <!-- mobile pagespeed grade -->
             <article class="grade-text">
-              <div class="grade-title"><h3>desktop</h3></div>
-              <div class="grade-container" id="desktop-grade">
-                <div class="grade-header"><h3>page name</h3></div>
-                <div class="grade-header"><h3>Performance</h3></div>
-                <div class="grade-header"><h3>Accessibility</h3></div>
-                <div class="grade-header"><h3>Best Practices</h3></div>
-                <div class="grade-header"><h3>SEO</h3></div>
+              <div class="grades">
+                <div class="grade-title"><h3>desktop</h3></div>
+                <div class="grade-container" id="desktop-grade">
+                  <div class="grade-header"><h3>page name</h3></div>
+                  <div class="grade-header"><h3>Performance</h3></div>
+                  <div class="grade-header"><h3>Accessibility</h3></div>
+                  <div class="grade-header"><h3>Best Practices</h3></div>
+                  <div class="grade-header"><h3>SEO</h3></div>
 
-                <div class="grade-item"><h3>Homepage</h3></div>
-                <div class="grade-item"><p>100</p></div>
-                <div class="grade-item"><p>100<p></div>
-                <div class="grade-item"><p>100<p></div>
-                <div class="grade-item"><p>100<p></div>
+                  <div class="grade-item"><h3>Homepage</h3></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100<p></div>
+                  <div class="grade-item"><p>100<p></div>
+                  <div class="grade-item"><p>100<p></div>
 
-                <div class="grade-item"><h3>All Category Pages</h3></div>
-                <div class="grade-item"><p>100<p></div>
-                <div class="grade-item"><p>100<p></div>
-                <div class="grade-item"><p>100<p></div>
-                <div class="grade-item"><p>100<p></div>
+                  <div class="grade-item"><h3>All Category Pages</h3></div>
+                  <div class="grade-item"><p>100<p></div>
+                  <div class="grade-item"><p>100<p></div>
+                  <div class="grade-item"><p>100<p></div>
+                  <div class="grade-item"><p>100<p></div>
 
-                <div class="grade-item"><h3>All Article Pages</h3></div>
-                <div class="grade-item"><p>100<p></div>
-                <div class="grade-item"><p>100<p></div>
-                <div class="grade-item"><p>100<p></div>
-                <div class="grade-item"><p>100<p></div>
+                  <div class="grade-item"><h3>All Article Pages</h3></div>
+                  <div class="grade-item"><p>100<p></div>
+                  <div class="grade-item"><p>100<p></div>
+                  <div class="grade-item"><p>100<p></div>
+                  <div class="grade-item"><p>100<p></div>
+                </div>
               </div>
               <div class="pagespeed-container">
                 <div class="pagespeed-grade-title">
@@ -207,7 +210,7 @@
                   <div class="border-white">
                     <img
                       src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_1350,fl_lossy/v1742916681/tech-trends-finish-desktop_dctwrz.avif"
-                        alt="PageSpeed Insights comparison showing the website's performance before optimization"
+                        alt="PageSpeed Insights comparison showing the website's performance after optimization"
                         type="image/avif"
                         class="hero-image"
                         width="527"
@@ -279,7 +282,7 @@
                     <div class="border-black">
                       <img
                         src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_1350,fl_lossy/v1742916682/tech-trends-finish-mobile_ca3hzy.avif"
-                          alt="PageSpeed Insights comparison showing the website's performance before optimization"
+                          alt="PageSpeed Insights comparison showing the website's performance after optimization"
                           type="image/avif"
                           class="hero-image"
                           width="527"
@@ -362,7 +365,7 @@
                 class="resume resume-date resume-border project"
               >
               <h2>project 1 | the design</h2>
-              <h2>past meets future</h2>
+              <h2>inspiration meets innovation</h2>
             </div>
             <article class="resume-border">
                 <div class="mood-board">
