--- a/pages/skills.html
+++ b/pages/skills.html
@@ -31,41 +31,103 @@
           <div class="skills-container">
             <div class="skills-grid skills-black-container">
               <div class="skills-row">
-                <div class="skills skills2"><h4 class="skills-text">imagination</h4></div>
-                <div class="skills skills0"><h4 class="skills-text">responsive design</h4></div>
-                <div class="skills skills1"><h4 class="skills-text">photoshop</h4></div>
-                <div class="skills-label skill2"><h3 class="skills-text">graphic design</h3></div>
-                <div class="skills-label skills3"><h3 class="skills-text">coding</h3></div>
+                <div class="skills skills4 skills-firstset tooltip">
+                  <h4 class="skills-text">SEO Optimization</h4>
+                  <span class="tooltip-text">Proficient in optimizing websites for search engines using keyword research, on-page SEO, link building, and analytics tools like Google Search Console, SEMrush, and Google Analytics to boost visibility and rankings.</span>
+                </div>
+                <div class="skills skills0 skills-firstset tooltip">
+                  <h4 class="skills-text">AI Content Creation</h4>
+                  <span class="tooltip-text">Skilled in leveraging AI tools like ChatGPT and Jasper to create high-quality, SEO-friendly articles and content that engage audiences and enhance online presence.</span>
+                </div>
+                <div class="skills skills1 tooltip">
+                  <h4 class="skills-text">AI Image Generation</h4>
+                  <span class="tooltip-text">Proficient in using AI image generation tools like Midjourney and DALL·E to create unique and high-quality images for websites, blogs, and social media, enhancing visual storytelling.</span>
+                </div>
+                <div class="skills-secondset skills2 tooltip">
+                  <h4 class="skills-text">AI Journalism</h4>
+                  <span class="tooltip-text">Expert in utilizing AI for generating data-driven articles, automating content creation, and tailoring pieces for specific audiences, streamlining the journalistic process.</span>
+                </div>
+                <div class="skills-secondset skills3 tooltip">
+                  <h4 class="skills-text">Responsive Design</h4>
+                  <span class="tooltip-text">Crafting flexible, mobile-first websites that adapt seamlessly to any screen size, ensuring optimal user experience across devices.</span>
+                </div>
               </div>
               <div class="skills-row">
-                <div class="skills skills4"><h4 class="skills-text">html</h4></div>
-                <div class="skills skills5"><h4 class="skills-text">ui/ux</h4></div>
-                <div class="skills skills6"><h4 class="skills-text">css</h4></div>
-                <div class="skills skills7"><h4 class="skills-text">midjourney</h4></div>
-                <div class="skills skills8"><h4 class="skills-text">figma</h4></div>
+                <div class="skills skills4 skills-firstset tooltip">
+                  <h4 class="skills-text">HTML</h4>
+                  <span class="tooltip-text">HTML is the standard markup language for documents designed to be displayed in a web browser.</span>
+                </div>
+                
+                <div class="skills skills5 skills-firstset tooltip">
+                  <h4 class="skills-text">UI/UX</h4>
+                  <span class="tooltip-text">Skilled in designing intuitive, user-centric interfaces and seamless user experiences, focusing on accessibility, usability, and aesthetics for both web and mobile platforms.</span>
+                </div>
+                <div class="skills skills5 skills-firstset tooltip">
+                  <h4 class="skills-text">CSS</h4>
+                  <span class="tooltip-text">Expert in using CSS to create visually appealing, responsive, and interactive web layouts, ensuring consistent styling across devices and browsers.</span>
+                </div>
+                <div class="skills skills7 skills-firstset tooltip">
+                  <h4 class="skills-text">Midjourney</h4>
+                  <span class="tooltip-text">Skilled in using Midjourney to generate AI-driven visual content, transforming creative concepts into stunning images for digital projects.</span>
+                </div>
+                <div class="skills skills8 skills-firstset tooltip">
+                  <h4 class="skills-text">Figma</h4>
+                  <span class="tooltip-text">Proficient in using Figma to design user interfaces and prototypes, ensuring seamless collaboration and efficient design workflows.</span>
+                </div>
               </div>
               <div class="skills-row">
-                <div class="skills skills9"><h4 class="skills-text">all things<br> adobe</h4></div>
-                <div class="skills skills10"><h4 class="skills-text">canva</h4></div>
-                <div class="skills-label skills11"><h3 class="skills-text">web<br> development</h3></div>
-                <div class="skills skills12"><h4 class="skills-text">python</h4></div>
-                <div class="skills skills13"><h4 class="skills-text">wireframe</h4></div>
+                <div class="skills skills9 skills-firstset tooltip">
+                  <h4 class="skills-text">Adobe Photoshop</h4>
+                  <span class="tooltip-text">Expert in Adobe Photoshop for high-quality image editing, retouching, and creating visually compelling graphics for web and digital media.</span>
+                </div>
+                <div class="skills skills10 skills-firstset tooltip">
+                  <h4 class="skills-text">Canva</h4>
+                  <span class="tooltip-text">Proficient in Canva for creating visually appealing graphics, presentations, and social media content with ease and efficiency.</span>
+                </div>
+                <div class="skills-secondset skills11 tooltip">
+                  <h4 class="skills-text">Web Development</h4>
+                  <span class="tooltip-text">Skilled in building responsive, user-friendly websites using modern web technologies like HTML, CSS, JavaScript, and frameworks to deliver seamless digital experiences.</span>
+                </div>
+                <div class="skills skills12 skills-firstset tooltip">
+                  <h4 class="skills-text">Python</h4>
+                  <span class="tooltip-text">Proficient in Python for building scalable applications, data analysis, automation, and backend development, with a focus on clean, efficient code.</span>
+                </div>
+                <div class="skills skills13 skills-firstset tooltip">
+                  <h4 class="skills-text">Wireframe</h4>
+                  <span class="tooltip-text">Experienced in creating wireframes to structure user interfaces, ensuring intuitive layouts and a seamless user experience for web and mobile applications.</span>
+                </div>
               </div>
               <div class="skills-row">
-                <div class="skills skills14"><h4 class="skills-text">javascript</h4></div>
-                <div class="skills-label skills15"><h3 class="skills-text">front end</h3></div>
-                <div class="skills skills16"><h4 class="skills-text">wordpress</h4></div>
-                <div class="skills skills17"><h4 class="skills-text">github</h4></div>
-                <div class="skills-label skills18"><h3 class="skills-text">back end</h3></div>
+                <div class="skills skills14 skills-firstset tooltip">
+                  <h4 class="skills-text">JavaScript</h4>
+                  <span class="tooltip-text">Proficient in JavaScript for adding interactivity to websites, including dynamic content, form validation, animations, and enhancing overall user experience.</span>
+                </div>
+                <div class="skills-secondset skills15 tooltip">
+                  <h4 class="skills-text">Front End</h4>
+                  <span class="tooltip-text">Skilled in front-end development, utilizing HTML, CSS, and JavaScript to create visually appealing, user-friendly, and responsive web interfaces.</span>
+                </div>
+                <div class="skills skills16 skills-firstset tooltip">
+                  <h4 class="skills-text">WordPress</h4>
+                  <span class="tooltip-text">Proficient in using WordPress to design and develop dynamic websites with customizable themes, plugins, and content management features for seamless user experience.</span>
+                </div>
+                <div class="skills skills17 skills-firstset tooltip">
+                  <h4 class="skills-text">GitHub</h4>
+                  <span class="tooltip-text">Experienced with GitHub for version control, collaboration, and managing code repositories, ensuring efficient team workflows and project management.</span>
+                </div>
+                <div class="skills-secondset skills18 tooltip">
+                  <h4 class="skills-text">Back End</h4>
+                  <span class="tooltip-text">Proficient in server-side development, managing databases, and building APIs to create robust and scalable web applications.</span>
+                </div>
               </div>
             </div>
           </div> 
-        </article>  
+        </article>
+
       </section>
       <div class="back-to-top">
         <button id="back-to-top" onclick="scrollToTop()">back to top</button>
       </div>   
-      </main>
+      </main> 
     <div id="footer"></div>  
     <script src="/assets/script.js"></script>                
   </body>
