updted project 3 to be responsive and seo optimized

--- a/assets/footer.html
+++ b/assets/footer.html
@@ -13,7 +13,16 @@
     <header>
       <footer id="nav">
         <div class="footer-logo">
-          <img src="/img/allisonstock-logo.png" alt="Logo for Allison Stock Inc">
+          <img       
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_2244,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+            alt="Photo of Genny Allison, the web developer and AI content specialist"
+            width="425"
+            height="auto"
+            loading="lazy"
+            fetchpriority="low"
+            style="object-fit: cover;aspect-ratio: 2.0769 / 1;"
+            decoding="async" 
+          />
         </div>
         <div class="footer-links">
           <ul>
