fixed warnings, discernable names, contrast for links

--- a/pages/project3.html
+++ b/pages/project3.html
@@ -671,12 +671,12 @@
                   </p>
                   <ul>
                     <li>
-                      <a href="https://search.google.com/search-console"></a>
-                      <strong>Google Search Console:</strong> Monitored site indexing, ensured mobile usability, and validated structured data for rich snippets, enhancing the site's visibility in search results.
+                      <a href="https://search.google.com/search-console"><strong>Google Search Console:</strong></a>
+                       Monitored site indexing, ensured mobile usability, and validated structured data for rich snippets, enhancing the site's visibility in search results.
                     </li>
                     <li>
-                      <a href="https://www.semrush.com/"></a>
-                      <strong>SEMrush</strong> and <a href="https://ahrefs.com/"><strong>Ahrefs</strong></a>: Performed extensive keyword research and optimized content for high-impact terms, boosting search rankings and organic traffic.
+                      <a href="https://www.semrush.com/"><strong>SEMrush</strong></a>
+                       and <a href="https://ahrefs.com/"><strong>Ahrefs</strong></a>: Performed extensive keyword research and optimized content for high-impact terms, boosting search rankings and organic traffic.
                     </li>
                     <li>
                       <a href="https://pagespeed.web.dev/"><strong>PageSpeed Insights:</strong></a> Achieved a perfect score of 100/100 on both mobile and desktop by optimizing images, eliminating render-blocking resources, and refining Core Web Vitals.
