--- a/assets/footer.html
+++ b/assets/footer.html
@@ -36,10 +36,50 @@
         </div>
         <div class="social-media">
           <ul>
-            <li><a href="https://x.com/allis78978" class="links"><img src="/img/x-icon.png"></a></li>
-            <li><a href="https://www.instagram.com/allison_stock_inc/" class="links"><img src="/img/ig-icon.png"></a></li>
-            <li><a href="https://www.linkedin.com/in/genny-allison/" class="links"><img src="/img/linkedin-icon.png"></a></li>
-            <li><a href="https://github.com/Allison2002" class="links"><img src="/img/git-icon.png"></a></li>
+            <li>
+              <a href="https://x.com/allis78978" class="links" aria-label="Visit my X (formerly Twitter) profile" role="link">
+                <img src="/img/x-icon.png"
+                  alt="Facebook logo" 
+                  type="image/avif"
+                  width="Twitter logo";
+                  height="auto"; 
+                  style="aspect-ratio: 0.484 / 1; object-fit: cover;"
+                >
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/allison_stock_inc/" class="links" aria-label="Visit my X (formerly Twitter) profile" role="link">
+                <img src="/img/ig-icon.png"
+                  alt="Instagram logo" 
+                  type="image/avif"
+                  width="Twitter icon";
+                  height="auto";
+                  style="aspect-ratio: 0.484 / 1; object-fit: cover;"
+                >
+              </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/genny-allison/" class="links" aria-label="Visit my X (formerly Twitter) profile" role="link">
+                <img src="/img/linkedin-icon.png"
+                  alt="Linked In logo" 
+                  type="image/avif"
+                  width="Twitter icon";
+                  height="auto";
+                  style="aspect-ratio: 0.484 / 1; object-fit: cover;"
+                >
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/Allison2002" class="links" aria-label="Visit my X (formerly Twitter) profile" role="link">
+                <img src="/img/git-icon.png"
+                  alt="Github logo" 
+                  type="image/avif"
+                  width="Twitter icon";
+                  height="auto";
+                  style="aspect-ratio: 0.484 / 1; object-fit: cover;"
+                >
+              </a>
+            </li>
           </ul>
         </div>
       </footer>
