--- a/assets/nav.html
+++ b/assets/nav.html
@@ -42,7 +42,7 @@
           </a>
         </div>
 
-        <div class="menu-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="mobile-menu">☰</div>
+        <button class="menu-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="mobile-menu">☰</button>
 
         <div class="nav-links">
           <ul>
