replaced hamburger icon, styles hamburger-nav-links

--- a/assets/nav.html
+++ b/assets/nav.html
@@ -42,7 +42,19 @@
           </a>
         </div>
 
-        <button class="menu-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="mobile-menu">☰</button>
+        <div class="menu-toggle" id="menu-toggle" aria-label="Open Menu">
+          <img
+            src="/img/hamburger-icon.png"
+            alt="Hamburger Icon Menu"
+            class="hamburger-icon"
+            width="32"
+            height="auto"
+            loading="eager"
+            fetchpriority="high"
+            object-fit="cover"
+            aspect-ratio="1 / 1"
+          />
+        </div>
 
         <div class="nav-links">
           <ul>
